--- a/beep-vue-app/public/index.html
+++ b/beep-vue-app/public/index.html
@@ -118,7 +118,7 @@
         console.log('init map') // obligatory callback
       }
     </script>
-    <script
+    <<script>
       defer
       src="https://maps.google.com/maps/api/js?libraries=places&key=<%= VUE_APP_GOOGLE_MAPS_KEY %>&callback=initMap"
     ></script>
